--- a/m/ma/mad/madsubmitter.com.html
+++ b/m/ma/mad/madsubmitter.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the madsubmitter.com privacy policy that was archived on 2010-03-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100329130623id_/http%3A//www.madsubmitter.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the madsubmitter.com privacy policy that was archived on 2010-09-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100904083734id_/http%3A//www.madsubmitter.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Submit Your Website URL Free - MadSubmitter Privacy policy</title>
@@ -35,17 +35,17 @@
 </head>
 <body>
 <div class="colortheme">
-      <div class="container_16"> What is your mood?<a href="javascript:chooseStyle('none', 60)"> <img src="images/colorset/default.gif" alt=""></a>
-<a href="javascript:chooseStyle('blue-theme', 60)"><img src="images/colorset/blue.gif" alt=""></a>
-<a href="javascript:chooseStyle('black-theme', 60)"><img src="images/colorset/black.gif" alt=""></a>
-<a href="javascript:chooseStyle('coffeetan-theme', 60)"><img src="images/colorset/coffeetan.gif" alt=""></a>
-<a href="javascript:chooseStyle('darkbrown-theme', 60)"><img src="images/colorset/brown.gif" alt=""></a>
-<a href="javascript:chooseStyle('green-theme', 60)"><img src="images/colorset/green.gif" alt=""></a>
-<a href="javascript:chooseStyle('grey-theme', 60)"><img src="images/colorset/gray.gif" alt=""></a>
-<a href="javascript:chooseStyle('ivory-theme', 60)"><img src="images/colorset/ivory.gif" alt=""></a>
-<a href="javascript:chooseStyle('orange-theme', 60)"><img src="images/colorset/orange.gif" alt=""></a>
-<a href="javascript:chooseStyle('red-theme', 60)"><img src="images/colorset/red.gif" alt=""></a>
-<a href="javascript:chooseStyle('vista-theme', 60)"><img src="images/colorset/vista.gif" alt=""></a>
+      <div class="container_16"> What is your mood?<a href="javascript:chooseStyle('none', 60)"> <img src="images/colorset/default.gif" alt="" width="20" height="20"></a>
+<a href="javascript:chooseStyle('blue-theme', 60)"><img src="images/colorset/blue.gif" alt="" width="20" height="20"></a>
+<a href="javascript:chooseStyle('black-theme', 60)"><img src="images/colorset/black.gif" alt="" width="20" height="20"></a>
+<a href="javascript:chooseStyle('coffeetan-theme', 60)"><img src="images/colorset/coffeetan.gif" alt="" width="20" height="20"></a>
+<a href="javascript:chooseStyle('darkbrown-theme', 60)"><img src="images/colorset/brown.gif" alt="" width="20" height="20"></a>
+<a href="javascript:chooseStyle('green-theme', 60)"><img src="images/colorset/green.gif" alt="" width="20" height="20"></a>
+<a href="javascript:chooseStyle('grey-theme', 60)"><img src="images/colorset/gray.gif" alt="" width="20" height="20"></a>
+<a href="javascript:chooseStyle('ivory-theme', 60)"><img src="images/colorset/ivory.gif" alt="" width="20" height="20"></a>
+<a href="javascript:chooseStyle('orange-theme', 60)"><img src="images/colorset/orange.gif" alt="" width="20" height="20"></a>
+<a href="javascript:chooseStyle('red-theme', 60)"><img src="images/colorset/red.gif" alt="" width="20" height="20"></a>
+<a href="javascript:chooseStyle('vista-theme', 60)"><img src="images/colorset/vista.gif" alt="" width="20" height="20"></a>
 </div>
 </div>
 
@@ -84,7 +84,7 @@
                 <ul style="display: none; visibility: hidden;">
                     <li><a href="http://www.madsubmitter.com/about-us.html">About Us</a></li>
                     <li><a href="http://www.madsubmitter.com/contact.html">Contact Us</a></li>
-                    <li><a href="http://www.madsubmitter.com/seo-affiliate.html">Affiliate &amp; Seller Program</a></li>
+                    <li><a href="http://www.madsubmitter.com/seo-affiliate.html">Affiliate &amp; Sellers Program</a></li>
                     <li><a href="http://www.madsubmitter.com/advertise.html">Advertise with us</a></li>
                     <li><a href="http://www.madsubmitter.com/partners.html">Our Partners</a></li>
                     <li><a href="http://www.madsubmitter.com/subscribe-newsletter.html">Subscribe to our Newsletters</a></li>
@@ -141,12 +141,19 @@ google_ad_height = 60;
                   <p align="left">Data     Collection<br>
                     The following data is collected and stored in our database when you use  an MadSubmitter.com service: email, name, address, phone, site url,  site name and description. We you select; our free website submission, premium website submission, directory submission &amp; search engines optimization your   personal information &amp; website data will be  also stored in our database. This data is  only collected for the personalized used of these services. </p>
                   <p align="left">Cookies<br>
-                    MadSubmitter.com uses cookies for some of its services (e.g. Site  Submission). The sole purpose of these cookies is to provide better  personalization of our services. We never use these cookies to track  customer habits or behaviour. </p>
+                    MadSubmitter.com uses cookies for some of its services (e.g. Site  Submission). The sole purpose of these cookies is to provide better  personalization of our services. We never use these cookies to track  customer habits or behaviour. <br>
+                  </p>
+                  <ul>
+                    <li>Google ads on this site:<br>
+                    Google, as a third party vendor, uses cookies to serve ads on our   site. </li>
+                    <li>Google's use of the DART cookie enables it and its partners to   serve ads to our users based on their visit to our site and/or other   sites on the Internet. </li>
+                    <li>Users may opt out of the use of the DART cookie by visiting the <a href="http://www.google.com/privacy_ads.html" target="_blank">Google ad &amp; content   network privacy policy</a>.  </li>
+                  </ul>
                   <p align="left">Opt-In<br>
                     All members of the MadSubmitter.com Newsletter have given  MadSubmitter.com their permission to be added to the list. At each  signup MadSubmitter.com collects the IP address of the new member's  computer and signup time. This is only used to identify malicious  people that sign up with someone else's email address.<br>
                     <br>
                     Opt-Out<br>
-                    If, at any time, you whish to be removed from the MadSubmitter  Newsletter, you can follow the removal instructions included in each  published issue. </p>
+                  If, at any time, you whish to be removed from the MadSubmitter  Newsletter, you can follow the removal instructions included in each  published issue. </p>
                 </div>
                 <div class="portfolioitem bordersub" align="center">
                   <h2><span class="boxfont_s_h2">Create your Free Privacy Policy web page  with our free </span><a href="http://www.madsubmitter.com/privacy-policy-generator" title="Privacy policy generator" target="_self" class="boxfont_s_h2Blue"><br>
@@ -195,17 +202,17 @@ google_ad_height = 600;
 <!-- Footer Block Start -->
 <div class="footer">
   <div class="container_16">
-    <table width="965" tabel="tabel" height="200" border="0" align="center" cellpadding="4" cellspacing="2">
+    <table width="965" height="200" border="0" align="center" cellpadding="4" cellspacing="2">
       <tbody><tr>
-        <td width="204" rowspan="3"><div><a href="http://wwww.madsubmitter.com/website-submission-services.html" title="Website submission services" target="_self"><strong>Website Submission Services</strong></a><br>
+        <td width="204" rowspan="3"><div><a href="http://www.madsubmitter.com/website-submission-services.html" title="Website submission services" target="_self"><strong>Website Submission Services</strong></a><br>
           <a href="http://www.madsubmitter.com/free-website-submission.html" title="Free website submission" target="_self">Free Website Submission</a><br>
           <a href="http://www.madsubmitter.com/premium-website-submission.html" title="Premium website submission" target="_self">Premium Website Submission</a><br>
           <a href="http://www.madsubmitter.com/directory-submission.html" title="Directory submission" target="_self">Directory Submission &amp; Listing</a></div></td>
-        <td width="200" rowspan="3"><div><a href="http://wwww.madsubmitter.com/seo-services.html" title="SEO services" target="_self"><strong>SEO Services</strong></a><br>
-          <a href="http://wwww.madsubmitter.com/website-submission-services.html" title="Website submission services" target="_self">Website Submission Services</a><br>
-          <a href="http://wwww.madsubmitter.com/search-engine-optimization.html" title="Search engine optimization" target="_self">Search Engine Optimiztion (SEO)</a><br>
+        <td width="200" rowspan="3"><div><a href="http://www.madsubmitter.com/seo-services.html" title="SEO services" target="_self"><strong>SEO Services</strong></a><br>
+          <a href="http://www.madsubmitter.com/website-submission-services.html" title="Website submission services" target="_self">Website Submission Services</a><br>
+          <a href="http://www.madsubmitter.com/search-engine-optimization.html" title="Search engine optimization" target="_self">Search Engine Optimization (SEO)</a><br>
           <a href="http://www.madsubmitter.com/cost-per-click.html" title="Cost per click advertising (CPC)" target="_self">Cost Per Click Advertising (CPC)</a><br>
-          <a href="http://wwww.madsubmitter.com/newsletter-advertising.html" title="Newsletter advertising" target="_self">Newsletter Advertising</a></div></td>
+          <a href="http://www.madsubmitter.com/newsletter-advertising.html" title="Newsletter advertising" target="_self">Newsletter Advertising</a></div></td>
         <td width="167" rowspan="3"><div><a href="http://www.madsubmitter.com/seo-tools.html" title="Free SEO tools" target="_self"><strong>Free SEO Tools</strong></a><br>
           <a href="http://www.madsubmitter.com/webmaster-tools" title="Free webmaster tools" target="_self">Free Webmaster Tools</a><br>
           <a href="http://www.madsubmitter.com/directory" title="Free directory listing" target="_self">Free Directory Listing</a><br>
@@ -214,7 +221,7 @@ google_ad_height = 600;
           <a href="http://www.madsubmitter.com/seo-member.html" title="Become SEO member" target="_self">Free SEO Membership</a><br>
           <a href="http://www.madsubmitter.com/seo-list.html" title="Listed SEO members" target="_self">Listed SEO Members</a></div></td>
         <td width="160" rowspan="4" valign="top"><div><a href="http://www.madsubmitter.com/help-and-support.html" title="Help &amp; support" target="_self"><strong>Help &amp; Support</strong></a><br>
-          <a href="http://www.madsubmitter.com/seo-affiliate.html" title="SEO affiliate &amp; Sellers program" target="_self">Affiliate &amp; Seller Program</a><br>
+          <a href="http://www.madsubmitter.com/seo-affiliate.html" title="SEO affiliate &amp; Sellers program" target="_self">Affiliate &amp; Sellers Program</a><br>
           <a href="http://www.madsubmitter.com/advertise.html" title="Advertise with us" target="_self">Advertise with us</a><br>
           <a href="http://www.madsubmitter.com/partners.html" title="Our partners" target="_self">Our Partners</a><br>
           <a href="http://www.madsubmitter.com/subscribe-newsletter.html" title="Subscribe to our newsletter" target="_self">Subscribe to our Newsletters</a><br>
@@ -224,18 +231,17 @@ google_ad_height = 600;
         <td height="9">&nbsp;</td>
       </tr>
       <tr>
-        <td height="9"><div class="bookmarkbox"><img src="images/social/twitter.png" alt="Add to StumbleUpon"><a href="http://www.twitter.com/madsubmitter?urlxURLx&amp;title=xMadSubmitter.comx&quot;&gt;Submit your website free with MadSubmitter.com" title="Share with Twitter" target="_blank">Twitter</a></div>
-          <div class="bookmarkbox"><img src="images/social/facebook.gif" alt="Add to Facebook"><a href="http://www.facebook.com/sharer.php?u=xURLx&amp;t=MadSubmitter.com" title="Share with Facebook" target="_blank">Facebook</a></div>
-          <div class="bookmarkbox"><img src="images/social/google.gif" alt="Add to google"><a href="http://www.google.com/bookmarks/mark?op=edit&amp;output=popup&amp;bkmk=http//www.madsubmitter.com&amp;title=Submit your website free with MadSubmitter.com" title="Share with Google" target="_blank">Google</a></div>
-          <div class="bookmarkbox"><img src="images/social/yahoo.gif" alt="Add to yahoo"><a href="http://myweb2.search.yahoo.com/myresults/bookmarklet?u=http//www.madsubmitter.com&amp;title=Submit your website free with MadSubmitter.com" title="Share with Yahoo" target="_blank">Yahoo</a></div>
-          <div class="bookmarkbox"><img src="images/social/reddit.gif" alt="Add to Reddit"><a href="http://reddit.com/submit?url=xURLx;title=xMadSubmitter.comx&quot; title=&quot;Reddit&quot;&gt;Submit your website free with MadSubmitter.com" title="Share with Reddit" target="_blank">Reddit</a></div>
+        <td height="9"><div class="bookmarkbox"><img src="images/social/twitter.png" alt="Add to StumbleUpon" width="15" height="15"><a href="http://www.twitter.com/madsubmitter?urlxURLx&amp;title=xMadSubmitter.comx&quot;&gt;Submit your website free with MadSubmitter.com" title="Share with Twitter" target="_blank">Twitter</a></div>
+          <div class="bookmarkbox"><img src="images/social/facebook.gif" alt="Add to Facebook" width="16" height="16"><a href="http://www.facebook.com/sharer.php?u=xURLx&amp;t=MadSubmitter.com" title="Share with Facebook" target="_blank">Facebook</a></div>
+          <div class="bookmarkbox"><img src="images/social/google.gif" alt="Add to google" width="16" height="16"><a href="http://www.google.com/bookmarks/mark?op=edit&amp;output=popup&amp;bkmk=http://www.madsubmitter.com&amp;title=Submit your website free with MadSubmitter.com" title="Share with Google" target="_blank">Google</a></div>
+          <div class="bookmarkbox"><img src="images/social/yahoo.gif" alt="Add to yahoo" width="16" height="16"><a href="http://myweb2.search.yahoo.com/myresults/bookmarklet?u=http://www.madsubmitter.com&amp;title=Submit your website free with MadSubmitter.com" title="Share with Yahoo" target="_blank">Yahoo</a></div>
+          <div class="bookmarkbox"><img src="images/social/reddit.gif" alt="Add to Reddit" width="18" height="18"><a href="http://reddit.com/submit?url=xURLx;title=xMadSubmitter.comx&quot; title=&quot;Reddit&quot;&gt;Submit your website free with MadSubmitter.com" title="Share with Reddit" target="_blank">Reddit</a></div>
           <strong> </strong></td>
-        <td height="9"><div class="bookmarkbox"><img src="images/social/digg.gif" alt="Add to Digg"><a href="http://digg.com/submit?phase=2&amp;url=xURLx&amp;title=xMadSubmitter.comx&quot; title=&quot;Submit to Digg&quot;&gt;Submit your website free with MadSubmitter.com" title="Share with Digg" target="_blank">Digg</a></div>
-          <div class="bookmarkbox"><img src="images/social/delicious.gif" alt="Add to Delicious"><a href="http://del.icio.us/post?urlxURLx&amp;title=xMadSubmitterx&quot;&gt;MadSubmitter.com" title="Share with Delicious" target="_blank">Delicious</a></div>
-          <div class="bookmarkbox"><img src="images/social/newsvine.gif" alt="Add to Newsvine"><a href="http://www.newsvine.com/_tools/seed&amp;save?u=http//www.madsubmitter.com&amp;h=Submit your website free with MadSubmitter.com" title="Share with Newsvine" target="_blank">Newsvine</a></div>
-          <div class="bookmarkbox"><img src="images/social/technorati.gif" alt="Add to technorati"><a href="http://technorati.com/faves?addxURLx&quot; title=&quot;MadSubmitter.com&quot;&gt;Submit your website free with MadSubmitter.com" title="Share with Technorati" target="_blank">Technorati</a></div>
-          <div class="bookmarkbox"><img src="images/social/stumbleupon.gif" alt="Add to StumbleUpon"><a href="http://www.stumbleupon.com/submit?urlxURLx&amp;title=xMadSubmitter.comx&quot;&gt;Submit your website free with MadSubmitter.com" title="Share with StumbleUpon" target="_blank">StumbleUpon</a><br>
-          </div></td>
+        <td height="9"><div class="bookmarkbox"><img src="images/social/digg.gif" alt="Add to Digg" width="16" height="16"><a href="http://digg.com/submit?phase=2&amp;url=xURLx&amp;title=xMadSubmitter.comx&quot; title=&quot;Submit to Digg&quot;&gt;Submit your website free with MadSubmitter.com" title="Share with Digg" target="_blank">Digg</a></div>
+          <div class="bookmarkbox"><img src="images/social/delicious.gif" alt="Add to Delicious" width="14" height="14"><a href="http://del.icio.us/post?urlxURLx&amp;title=xMadSubmitterx&quot;&gt;MadSubmitter.com" title="Share with Delicious" target="_blank">Delicious</a></div>
+          <div class="bookmarkbox"><img src="images/social/newsvine.gif" alt="Add to Newsvine" width="16" height="16"><a href="http://www.newsvine.com/_tools/seed&amp;save?u=http://www.madsubmitter.com&amp;h=Submit your website free with MadSubmitter.com" title="Share with Newsvine" target="_blank">Newsvine</a></div>
+          <div class="bookmarkbox"><img src="images/social/technorati.gif" alt="Add to technorati" width="16" height="16"><a href="http://technorati.com/faves?addxURLx&quot; title=&quot;MadSubmitter.com&quot;&gt;Submit your website free with MadSubmitter.com" title="Share with Technorati" target="_blank">Technorati</a></div>
+          <div class="bookmarkbox"><img src="images/social/stumbleupon.gif" alt="Add to StumbleUpon" width="16" height="16"><a href="http://www.stumbleupon.com/submit?urlxURLx&amp;title=xMadSubmitter.comx&quot;&gt;Submit your website free with MadSubmitter.com" title="Share with StumbleUpon" target="_blank">StumbleUpon</a><br></div></td>
       </tr>
       <tr>
         <td width="85" rowspan="3" valign="top">&nbsp;</td>
@@ -256,8 +262,7 @@ google_ad_height = 600;
 <!--[if lt IE 7.]>
 <script defer type="text/javascript" src="js/unitpngfix.js"></script>
 <![endif]-->
-<script type="text/javascript" src="js/jquery-1.2.6.pack.js"></script> 
-<script type="text/javascript" src="js/stepcarousel.js"></script>
+<script type="text/javascript" src="js/jquery-1.2.6.pack.js"></script>
 <script src="js/hoverIntent.js" type="text/javascript"></script>
 <script src="js/superfish.js" type="text/javascript"></script>
 <script type="text/javascript">
