--- a/s/sp/spl/splenda.com.html
+++ b/s/sp/spl/splenda.com.html
@@ -1,33 +1,34 @@
-<!--The following is the downloaded HTML source of the splenda.com privacy policy that was archived on 2010-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100626214715id_/http%3A//www.splenda.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the splenda.com privacy policy that was archived on 2010-09-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100906055822id_/http%3A//www.splenda.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 		<title>Privacy policy | SPLENDA®</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="/sites/all/themes/splenda/favicon.ico" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/lightbox2/css/lightbox.css?j">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/nice_menus/nice_menus.css?j">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/nice_menus/nice_menus_default.css?j">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/splenda/css/typography.css?j">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/splenda/css/main.css?j">
-    <script type="text/javascript" src="/misc/jquery.js?j"></script>
-<script type="text/javascript" src="/misc/drupal.js?j"></script>
-<script type="text/javascript" src="/sites/all/modules/GoogleSearch/internetsearch/internetsearch.js?j"></script>
-<script type="text/javascript" src="/sites/all/modules/jnj_spj_ahah/js/jnj-spj-ahah.js?j"></script>
-<script type="text/javascript" src="/sites/all/modules/jnj_spj_ahah/js/swfobject.js?j"></script>
-<script type="text/javascript" src="/sites/all/modules/jnj_wise_crm/js/wisecrm.js?j"></script>
-<script type="text/javascript" src="/sites/all/modules/jnj_wise_crm/js/json2.js?j"></script>
-<script type="text/javascript" src="/sites/all/modules/lightbox2/js/lightbox_video.js?j"></script>
-<script type="text/javascript" src="/sites/all/modules/lightbox2/js/lightbox.js?j"></script>
-<script type="text/javascript" src="/sites/all/modules/nice_menus/nice_menus.js?j"></script>
-<script type="text/javascript" src="/sites/all/modules/WebTrends/js/jnj_webtrends.js?j"></script>
-<script type="text/javascript" src="/sites/all/themes/splenda/js/swfobject.js?j"></script>
-<script type="text/javascript" src="/sites/all/themes/splenda/js/jquery.dimensions.js?j"></script>
-<script type="text/javascript" src="/sites/all/themes/splenda/js/jquery.gradient.js?j"></script>
-<script type="text/javascript" src="/sites/all/themes/splenda/js/jquery.validate.js?j"></script>
-<script type="text/javascript" src="/sites/all/themes/splenda/js/jquery.cookie.js?j"></script>
-<script type="text/javascript" src="/sites/all/themes/splenda/js/common.js?j"></script>
-<script type="text/javascript" src="/sites/all/themes/splenda/js/jquery.ifixpng.js?j"></script>
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/lightbox2/css/lightbox.css?t">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/nice_menus/nice_menus.css?t">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/nice_menus/nice_menus_default.css?t">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/splenda/css/typography.css?t">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/splenda/css/main.css?t">
+    <script type="text/javascript" src="/misc/jquery.js?t"></script>
+<script type="text/javascript" src="/misc/drupal.js?t"></script>
+<script type="text/javascript" src="/sites/all/modules/GoogleSearch/internetsearch/internetsearch.js?t"></script>
+<script type="text/javascript" src="/sites/all/modules/jnj_spj_ahah/js/jnj-spj-ahah.js?t"></script>
+<script type="text/javascript" src="/sites/all/modules/jnj_spj_ahah/js/swfobject.js?t"></script>
+<script type="text/javascript" src="/sites/all/modules/jnj_wise_crm/js/wisecrm.js?t"></script>
+<script type="text/javascript" src="/sites/all/modules/jnj_wise_crm/js/json2.js?t"></script>
+<script type="text/javascript" src="/sites/all/modules/lightbox2/js/lightbox_video.js?t"></script>
+<script type="text/javascript" src="/sites/all/modules/lightbox2/js/lightbox.js?t"></script>
+<script type="text/javascript" src="/sites/all/modules/nice_menus/nice_menus.js?t"></script>
+<script type="text/javascript" src="/sites/all/modules/WebTrends/js/jnj_webtrends.js?t"></script>
+<script type="text/javascript" src="/sites/all/themes/splenda/js/swfobject.js?t"></script>
+<script type="text/javascript" src="/sites/all/themes/splenda/js/jquery.dimensions.js?t"></script>
+<script type="text/javascript" src="/sites/all/themes/splenda/js/jquery.gradient.js?t"></script>
+<script type="text/javascript" src="/sites/all/themes/splenda/js/jquery.validate.js?t"></script>
+<script type="text/javascript" src="/sites/all/themes/splenda/js/jquery.cookie.js?t"></script>
+<script type="text/javascript" src="/sites/all/themes/splenda/js/common.js?t"></script>
+<script type="text/javascript" src="/sites/all/themes/splenda/js/jquery.ifixpng.js?t"></script>
+<script type="text/javascript" src="/sites/all/themes/splenda/js/recipes-by-region.js?t"></script>
 <script type="text/javascript">jQuery.extend(Drupal.settings, { "basePath": "/", "internetsearch": { "xmlPath": "" }, "googleanalytics": { "trackOutgoing": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip" }, "lightbox2": { "rtl": 0, "file_path": "/(\\w\\w/)sites/default/files", "default_image": "/sites/all/modules/lightbox2/images/brokenimage.jpg", "border_size": "10", "font_color": "000", "box_color": "fff", "top_position": "", "overlay_opacity": "0.8", "overlay_color": "000", "disable_close_click": 1, "resize_sequence": "0", "resize_speed": 400, "fade_in_speed": 400, "slide_down_speed": 600, "use_alt_layout": 0, "disable_resize": 0, "disable_zoom": 0, "force_show_nav": 0, "loop_items": 0, "node_link_text": "View Image Details", "node_link_target": 0, "image_count": "Image !current of !total", "video_count": "Video !current of !total", "page_count": "Page !current of !total", "lite_press_x_close": "press \x3ca href=\"#\" onclick=\"hideLightbox(); return FALSE;\"\x3e\x3ckbd\x3ex\x3c/kbd\x3e\x3c/a\x3e to close", "download_link_text": "", "enable_login": false, "enable_contact": false, "keys_close": "c x 27", "keys_previous": "p 37", "keys_next": "n 39", "keys_zoom": "z", "keys_play_pause": "32", "display_image_size": "", "image_node_sizes": "()", "trigger_lightbox_classes": "", "trigger_lightbox_group_classes": "", "trigger_slideshow_classes": "", "trigger_lightframe_classes": "", "trigger_lightframe_group_classes": "", "custom_class_handler": 0, "custom_trigger_classes": "", "disable_for_gallery_lists": true, "disable_for_acidfree_gallery_lists": true, "enable_acidfree_videos": true, "slideshow_interval": 5000, "slideshow_automatic_start": true, "slideshow_automatic_exit": true, "show_play_pause": true, "pause_on_next_click": false, "pause_on_previous_click": true, "loop_slides": false, "iframe_width": 600, "iframe_height": 400, "iframe_border": 1, "enable_video": 1, "flvPlayer": "/sites/default/files/flash/sugarSmartQuiz/loader.swf", "flvFlashvars": "" } });</script>
 <script type="text/javascript">window.google_analytics_uacct = "UA-4289122-5";</script>
 </head>
@@ -60,7 +61,7 @@
   <div class="form-item" id="edit-search-theme-form-1-wrapper">
  <span>Search</span><a class="suggest" href="#"></a> <input type="text" maxlength="128" name="search_theme_form" id="edit-search-theme-form-1" size="18" value="" title="Enter the terms you wish to search for." class="form-text">
 </div>
-<input type="hidden" name="form_build_id" id="form-3c7fa654e49ce87da34d4876f5ea8b35" value="form-3c7fa654e49ce87da34d4876f5ea8b35">
+<input type="hidden" name="form_build_id" id="form-97fdb3b2197d4cca6b1c9c439fdc3cde" value="form-97fdb3b2197d4cca6b1c9c439fdc3cde">
 <input type="hidden" name="form_id" id="edit-search-theme-form" value="search_theme_form">
   
 </div>
@@ -189,7 +190,11 @@ e-newsletter to enjoy recipes and more.</p>
 	    <img alt="" border="0" name="DCSIMG" width="1" height="1" src="http://sdc.be.jnj.com/dcsf4xstd100004b397kpvfov_1k1j/njs.gif?dcsuri=/nojavascript&amp;WT.js=No&amp;WT.tv=8.0.3a">
     </noscript>
     <!-- END of WebTrends script code -->	
-    
+  
+<p><style type="text/css">
+div#footer-holder div#footer-menu div.two ul{width:335px;}
+</style></p>
+  
 <!-- footer menu starts -->
 <div id="footer-menu">
 <ul class="menu"><li class="leaf first"><a href="/legal-notice" title="Legal Notice">Legal Notice</a></li>
@@ -197,7 +202,8 @@ e-newsletter to enjoy recipes and more.</p>
 <li class="leaf"><a href="/contact-us" title="Contact Us">Contact Us</a></li>
 <li class="leaf last"><a href="/sitemap" title="Site Map">Site Map</a></li>
 </ul><div class="two"><ul class="menu"><li class="leaf first"><a href="http://www.splendaprofessional.com" title="Healthcare-Professionals">Healthcare-Professionals</a></li>
-<li class="leaf last"><a href="http://www.splendafoodservice.com/" title="SPLENDA® Food Services">SPLENDA<sup>®</sup> Food Services</a></li>
+<li class="leaf"><a href="http://www.splendafoodservice.com/" title="SPLENDA® Food Services">SPLENDA<sup>®</sup> Food Services</a></li>
+<li class="leaf last"><a href="http://www.tateandlyle.com/ingredientsandservices/chooseaningredientorservice/americas/pages/splenda%c2%aesucralose.aspx " title="Tate &amp; Lyle">Tate &amp; Lyle</a></li>
 </ul></div>
 
 <select id="footer-select" onchange="loadsplendasites(this);">
@@ -258,9 +264,12 @@ This site contains links to websites to which our Privacy Policy does not apply.
 This link will take you to a website to which this privacy policy does not apply.
 <br>We encourage you to read the privacy policy of every website you visit.
 </div>
-
+<div id="disclaimer_over-left">
+This link will take you to a website to which this privacy policy does not apply.
+<br>We encourage you to read the privacy policy of every website you visit.
+</div>
 <!-- body bg ends -->
-  <script type="text/javascript" src="/sites/all/modules/google_analytics/googleanalytics.js?j"></script>
+  <script type="text/javascript" src="/sites/all/modules/google_analytics/googleanalytics.js?t"></script>
 <script type="text/javascript">var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">try{var pageTracker = _gat._getTracker("UA-4289122-5");pageTracker._trackPageview();} catch(err) {}</script>
 
